--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "vue": "^2.5.16",
     "vue-recaptcha": "^1.1.1",
     "vue-router": "^3.0.1",
+    "vuelidate": "^0.7.4",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
