--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "pug": "^2.0.3",
     "pug-plain-loader": "^1.0.0",
     "vue": "^2.5.16",
+    "vue-analytics": "^5.12.2",
     "vue-recaptcha": "^1.1.1",
     "vue-router": "^3.0.1",
     "vuelidate": "^0.7.4",
