--- a/Caddyfile
+++ b/Caddyfile
@@ -1,10 +1,17 @@
-# Faucet Page
 faucetcosmos.network {
     gzip
     proxy / localhost:8080 {
         transparent
     }
-    ratelimit * /claim 1 1 minute
+    ratelimit * /claim 1 1 day
+}
+
+faucet.cosmos.network {
+    gzip
+    proxy / localhost:8080 {
+        transparent
+    }
+    ratelimit * /claim 1 1 day
 }
 
 
