update readme, use frontend env file

--- a/.env
+++ b/.env
@@ -1,7 +1,20 @@
-AMOUNT_FAUCET=10faucetToken
-AMOUNT_STEAK=1steak
-KEY=default
-NODE=http://localhost:46657
+# the name of the testnet
 CHAIN=gaia-7000
-PASS=1234567890
+
+# Google reCaptcha secret key (server side integration)
 RECAPTCHA_SECRET_KEY=PASTESECRETKEY
+
+# how much faucetToken to send
+AMOUNT_FAUCET=10faucetToken
+
+# how much steak to send
+AMOUNT_STEAK=1steak
+
+# gaiacli account that holds the faucet funds
+KEY=default
+
+# gaiacli account password
+PASS=1234567890
+
+# full node that runs `gaiacli send`
+NODE=http://localhost:46657
