allow frontend directory to be changed

--- a/.env
+++ b/.env
@@ -4,6 +4,9 @@ CHAIN=gaia-7000
 # Google reCaptcha secret key (server side integration)
 RECAPTCHA_SECRET_KEY=PASTESECRETKEY
 
+# location of the static front end files
+FRONTEND_DIR=./frontend/dist/
+
 # how much faucetToken to send
 AMOUNT_FAUCET=10faucetToken
 
