cleaned up environment variables

--- a/backend/.env
+++ b/backend/.env
@@ -1,23 +1,23 @@
 # the name of the testnet
-CHAIN=gaia-7000
+FAUCET_CHAIN=gaia-7000
 
 # Google reCaptcha secret key (server side integration)
-RECAPTCHA_SECRET_KEY=PASTESECRETKEY
-
-# location of the static front end files
-FRONTEND_DIR=./frontend/dist/
+FAUCET_RECAPTCHA_SECRET_KEY=PASTESECRETKEY
 
 # how much faucetToken to send
-AMOUNT_FAUCET=10faucetToken
+FAUCET_AMOUNT_FAUCET=10faucetToken
 
 # how much steak to send
-AMOUNT_STEAK=1steak
+FAUCET_AMOUNT_STEAK=1steak
 
 # gaiacli account that holds the faucet funds
-KEY=default
+FAUCET_KEY=default
 
 # gaiacli account password
-PASS=1234567890
+FAUCET_PASS=1234567890
 
 # full node that runs `gaiacli send`
-NODE=http://localhost:46657
+FAUCET_NODE=http://localhost:46657
+
+# public url to run faucet backend
+FAUCET_PUBLIC_URL=127.0.0.1:8000
