--- a/frontend/.env
+++ b/frontend/.env
@@ -4,5 +4,5 @@ VUE_APP_CHAIN=gaia-7000
 # Google reCaptcha site key (client side integration)
 VUE_APP_RECAPTCHA_SITE_KEY=6LdqyV0UAAAAAEqgBxvSsDpL2aeTEgkz_VTz1Vi1
 
-# Faucet backend url to POST a token claim request
-VUE_APP_CLAIM_URL=http://localhost:8080/claim
+# faucet backend url (to POST a /claim)
+VUE_APP_CLAIM_URL=http://localhost:8000/claim
