--- a/backend/.env
+++ b/backend/.env
@@ -19,5 +19,5 @@ FAUCET_PASS=1234567890
 # full node that runs `gaiacli send`
 FAUCET_NODE=http://localhost:46657
 
-# public url to run faucet backend
+# faucet backend url (public)
 FAUCET_PUBLIC_URL=127.0.0.1:8000
