tweak env var comment

--- a/frontend/.env
+++ b/frontend/.env
@@ -4,5 +4,6 @@ VUE_APP_CHAIN=gaia-7000
 # Google reCaptcha site key (client side integration)
 VUE_APP_RECAPTCHA_SITE_KEY=6LdqyV0UAAAAAEqgBxvSsDpL2aeTEgkz_VTz1Vi1
 
-# faucet backend url (to POST a /claim)
+# faucet backend url (/claim)
+# hostname and port should match VUE_APP_CLAIM_URL in ../backend/.env
 VUE_APP_CLAIM_URL=http://localhost:8000/claim
