frontend env fix

--- a/frontend/.env
+++ b/frontend/.env
@@ -5,5 +5,5 @@ VUE_APP_CHAIN=gaia-7000
 VUE_APP_RECAPTCHA_SITE_KEY=6LdqyV0UAAAAAEqgBxvSsDpL2aeTEgkz_VTz1Vi1
 
 # faucet backend url (/claim)
-# hostname and port should match VUE_APP_CLAIM_URL in ../backend/.env
+# hostname and port should match FAUCET_PUBLIC_URL in ../backend/.env
 VUE_APP_CLAIM_URL=http://localhost:8000/claim
