--- a/frontend/.env
+++ b/frontend/.env
@@ -1,7 +1,7 @@
 # the name of the testnet
 VUE_APP_CHAIN=gaia-7000
 
-# Google reCaptcha site key (client side integration)
+# Google reCaptcha site key
 VUE_APP_RECAPTCHA_SITE_KEY=6LdqyV0UAAAAAEqgBxvSsDpL2aeTEgkz_VTz1Vi1
 
 # faucet backend url (/claim)
