update env file usage

--- a/backend/.env
+++ b/backend/.env
@@ -1,8 +1,12 @@
 # the name of the testnet
 FAUCET_CHAIN=gaia-7000
 
-# Google reCaptcha secret key (server side integration)
+# Google reCaptcha secret key
 FAUCET_RECAPTCHA_SECRET_KEY=PASTESECRETKEY
+
+# faucet backend url
+# hostname and port should match VUE_APP_CLAIM_URL in ../frontend/.env
+FAUCET_PUBLIC_URL=127.0.0.1:8000
 
 # how much faucetToken to send
 FAUCET_AMOUNT_FAUCET=10faucetToken
@@ -18,6 +22,3 @@ FAUCET_PASS=1234567890
 
 # full node that runs `gaiacli send`
 FAUCET_NODE=http://localhost:46657
-
-# faucet backend url (public)
-FAUCET_PUBLIC_URL=127.0.0.1:8000
