--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,31 @@
-node_modules
 vendor
-.DS_Store
 backend/faucet
 backend/.env.local
+
+
+# Frontend .gitignore
+.DS_Store
+node_modules
+/dist
+
+/tests/e2e/reports/
+selenium-debug.log
+
+# local env files
+.env.local
+.env.*.local
+
+# Log files
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Editor directories and files
+.idea
+.vscode
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw*
+
