Revert "Refactor backend and frontend into same repo on Bucky's request" I still think it's not a good idea to merge those two and this should be in separate repo. We'll discuss tomorrow.
This reverts commit 03269f4e1f5328de959aa803c7c174648bcd1311.

--- a/backend/.env
+++ b/backend/.env
@@ -1,7 +1,3 @@
-#
-# Backend input variables
-#
-
 # the name of the testnet
 FAUCET_CHAIN=gaia-7000
 
@@ -9,7 +5,7 @@ FAUCET_CHAIN=gaia-7000
 FAUCET_RECAPTCHA_SECRET_KEY=PASTESECRETKEY
 
 # faucet backend url
-# hostname and port should match VUE_APP_CLAIM_URL for frontend
+# hostname and port should match VUE_APP_CLAIM_URL in ../frontend/.env
 FAUCET_PUBLIC_URL=127.0.0.1:8000
 
 # how much faucetToken to send
@@ -26,18 +22,3 @@ FAUCET_PASS=1234567890
 
 # full node that runs `gaiacli send`
 FAUCET_NODE=http://localhost:46657
-
-#
-# Frontend input variables
-#
-
-# the name of the testnet
-VUE_APP_CHAIN=gaia-7000
-
-# Google reCaptcha site key
-VUE_APP_RECAPTCHA_SITE_KEY=6LdqyV0UAAAAAEqgBxvSsDpL2aeTEgkz_VTz1Vi1
-
-# faucet backend url (/claim)
-# hostname and port should match FAUCET_PUBLIC_URL for backend
-VUE_APP_CLAIM_URL=http://localhost:8000/claim
-
